# codingwithjohan-pelican

./: .editorconfig  .gitignore  README.md  authors_meta.py  mk_card.py  netlify_client.py  pelican_authors_meta.py  pelicanconf.py  publishconf.py  pyproject.toml  tasks.py  utils.py
.github/workflows/: publish-site.yml
authors/: johan-vergeer.md
content/: my-first-post.md  pubs.bib
content/asp.net core/: 2019-03-31-asp-net-core-integration-tests.md  2019-03-31-asp-net-core-seeding-databse.md
content/dotnet/: 2019-03-15-cake.md  2019-05-26-net-guid-uuid-version.md
content/general/: 2019-03-17-useful-links.md  2020-01-08-future-topics.md  2020-01-08-picking-blog-topics.md
content/pages/: about.md  blog.md
content/python/: 2019-12-07-liquidpy.md  2019-12-07-markdown.md  2019-12-07-pelican.md  2020-01-08-solid-python-development.md  2020-01-17_multiple_inheritance.md  2020-01-24-solid-dependency-inversion-principle.md  2020-01-24-solid-interface-segregation-principle.md  2020-01-26_dependency-injection-frameworks.md  2020-02-14_interfaces-in-python.md  2020-02-17_solid-liskov-substitution-principle.md  2020-02-17_solid-open-closed-principle.md  2020-02-17_solid-single-responsibility-principle.md  dependency_injection.py
content/restructuredtext/: 2019-12-07-useful-links.md
content/uml/: 2019-03-24-uml-sequence-diagram-exception-handling.md
content/vs code/: 2019-03-24-vs-code-extensions.md  2019-03-24-vs-code-settings.md
themes/material-kit/: .editorconfig  .gitignore  README.md  package-lock.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
themes/material-kit/src/: index.js
themes/material-kit/src/js/pages/: article.js  index.js
themes/material-kit/src/sass/: main.scss
themes/material-kit/src/sass/base/: _typography.scss
themes/material-kit/src/sass/components/: _bibliography.scss  _checklist.scss  _codehighlight.scss  _procon.scss  (+1 more)
themes/material-kit/static/fonts/: README.md
themes/material-kit/static/img/: passion-led-us-here.xcf
themes/material-kit/templates/: _layout.html  _layoutBase.html  _macros.html  archives.html  article.html  author.html  base.html  category.html  index.html  page.html  period_archives.html  tag.html
themes/material-kit/templates/includes/: _analytics.html  _article.html  _feeds.html  _footer.html  _head.html  _nav.html  _pagination.html  _scripts.html  _tags.html
(+5 files in other folders)
