[tool.poetry]
name = "redgyro-blog"
version = "0.1.0"
description = "The RedGyro.com blog"
authors = ["Johan Vergeer <johanvergeer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.2"
markdown = "^3.1"
invoke = "^1.3"
livereload = "^2.6"
pelican-gist = "^0.3.4"
pelican-add-css-classes = "^1.0"
docutils-stubs = "^0.0.21"
pymdown-extensions = "^6.2"
ghp-import = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
