[tool.poetry]
name = "coding-with-johan-blog"
version = "0.1.0"
description = "Coding With Johan Blog"
authors = ["Johan Vergeer <johanvergeer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
docutils-stubs = "^0.0.21"
ghp-import = "^0.5.5"
invoke = "^1.3"
livereload = "^2.6"
markdown = "^3.1"
pelican = "^4.2"
pelican-add-css-classes = "^1.0"
pelican-gist = "^0.3.4"
pymdown-extensions = "^6.2"
requests = "^2.22"
pelican-series-plugin = "0.0.1"
pelican-timegraphics-plugin = "^1.0.0"
python-markdown-comments = "^1.0.0"
pelican-cite = "^1.0.0"
pybtex-author-year-label = "^1.0.0"
markdown-checklist = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
